--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <li><a href="#">Головна</a></li>
             <li><a href="#">Історія</a></li>
             <li><a href="#">Про нас</a></li>
+            <li><a href="#">Фотогалерея</a></li>
             <li><a href="#">Цікаві факти</a>
                 <ul class="menu__submenu">
                     <li>
